<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-60dp"
        android:layout_marginEnd="-60dp"
        android:layout_marginRight="-60dp"
        android:layout_marginBottom="-196dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_circle_24"
        app:tint="@color/blue_accent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="512dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-240dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginBottom="-272dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_circle_24"
        app:tint="@color/blue_primary" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/app_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/SubTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-45dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardCalendar"
            style="@style/CardMenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutCalendar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_accent">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:adjustViewBounds="true"
                    android:tint="@color/blue_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_calendar_month_24" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/MenuLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/calendar"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    app:layout_constraintTop_toTopOf="@+id/imageView4" />

                <TextView
                    android:id="@+id/tvCalendarDate"
                    style="@style/LabelTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@string/calendar"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView6"
                    style="@style/RedLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/expiring"
                    app:layout_constraintBottom_toBottomOf="@+id/tvExpiringCount"
                    app:layout_constraintStart_toStartOf="@+id/imageView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4"
                    app:layout_constraintVertical_bias="1.0" />

                <TextView
                    android:id="@+id/tvExpiringCount"
                    style="@style/RedCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/sample_count"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/tvCalendarDate"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardProduct"
            style="@style/CardMenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardCalendar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutProducts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_accent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:adjustViewBounds="true"
                    android:tint="@color/blue_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_shopping_bag_24" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/MenuLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/products"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toTopOf="@+id/imageView5" />

                <TextView
                    android:id="@+id/tvProductCount"
                    style="@style/MainCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/sample_count"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardExpirations"
            style="@style/CardMenuItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardProduct">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layoutExpirations"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_accent"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="12dp"
                    android:adjustViewBounds="true"
                    android:tint="@color/blue_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_trending_down_24" />

                <TextView
                    android:id="@+id/textView4"
                    style="@style/MenuLabelTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/expirations"
                    app:layout_constraintStart_toEndOf="@+id/imageView6"
                    app:layout_constraintTop_toTopOf="@+id/imageView6" />

                <TextView
                    android:id="@+id/tvExpirationCount"
                    style="@style/RedCountTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/sample_count"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/textView4" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>